Added a sorting by multiple columns able.

--- a/src/Monq.Core.Paging/Monq.Core.Paging.csproj
+++ b/src/Monq.Core.Paging/Monq.Core.Paging.csproj
@@ -27,7 +27,7 @@
     <PackageReference Include="DelegateDecompiler" Version="0.30.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
-    <PackageReference Include="Monq.Core.Paging.Models" Version="4.1.0" />
+    <PackageReference Include="Monq.Core.Paging.Models" Version="4.2.0-rev-6932338762" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
